samples/_failures_safe/1761558981_a3c651_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d813d42.c: In function ‘main’:
./samples/SAFE/__tmp_4d813d42.c:170:5: error: expected expression at end of input
  170 |     if (scanf("%d", &choice) != 1)
      |     ^~
./samples/SAFE/__tmp_4d813d42.c:170:5: error: expected declaration or statement at end of input
